@@ -5,7 +5,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: choosedir.test,v 1.13 2004/06/24 12:45:42 dkf Exp $
+# RCS: @(#) $Id: choosedir.test,v 1.14 2004/12/08 03:02:53 dgp Exp $
 #
 
 package require tcltest 2.1
@@ -81,10 +81,9 @@ proc SendButtonPress {parent btn type} {
 #
 #----------------------------------------------------------------------
 # Make a dir for us to rely on for tests
-makeDirectory choosedirTest
-set dir [pwd]
+set real [makeDirectory choosedirTest]
+set dir [file dirname $real]
 set fake [file join $dir non-existant]
-set real [file join $dir choosedirTest]
 
 set parent .
 
@@ -145,5 +144,6 @@ test choosedir-5.1 "tk_chooseDirectory, handles {} entry text" unix {
 } $real
 
 # cleanup
+removeDirectory choosedirTest
 cleanupTests
 return
