@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: filebox.test,v 1.16 2004/06/04 19:55:31 dgp Exp $
+# RCS: @(#) $Id: filebox.test,v 1.17 2004/12/08 03:02:53 dgp Exp $
 #
 
 package require tcltest 2.1
@@ -375,5 +375,6 @@ foreach mode $modes {
 set tk_strictMotif $tk_strictMotif_old
 
 # cleanup
+removeFile filebox.tmp
 cleanupTests
 return
