@@ -9,7 +9,7 @@
 #
 # Author: Paul Mackerras (paulus@cs.anu.edu.au)
 #
-# RCS: @(#) $Id: imgPhoto.test,v 1.20 2004/12/04 00:04:41 dkf Exp $
+# RCS: @(#) $Id: imgPhoto.test,v 1.21 2004/12/08 03:03:06 dgp Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -23,7 +23,7 @@ update
 
 set README [makeFile {
 README -- Tk test suite design document.
-} README-imgPhotot]
+} README-imgPhoto]
 
 # find the teapot.ppm file for use in these tests
 # first look in $tk_library/demos/images/teapot.ppm
