@@ -8,7 +8,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: main.test,v 1.9 2004/05/23 17:34:48 dkf Exp $
+# RCS: @(#) $Id: main.test,v 1.10 2004/12/08 03:03:06 dgp Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -28,7 +28,7 @@ test main-2.1 {Tk_MainEx: -encoding option} -constraints {
         stdio
     } -setup {
         set script [makeFile {} script]
-        removeFile script
+        file delete $script
         set f [open $script w]
         fconfigure $f -encoding utf-8
         puts $f {puts [list $argv0 $argv $tcl_interactive]}
@@ -47,7 +47,7 @@ test main-2.2 {Tk_MainEx: -encoding option} -constraints {
         stdio
     } -setup {
         set script [makeFile {} script]
-        removeFile script
+        file delete $script
         set f [open $script w]
         fconfigure $f -encoding utf-8
         puts $f {puts [list $argv0 $argv $tcl_interactive]}
@@ -80,7 +80,7 @@ test main-2.3 {Tk_MainEx: -encoding option} -constraints {
         stdio
     } -setup {
         set script [makeFile {} script]
-        removeFile script
+        file delete $script
         set f [open $script w]
         fconfigure $f -encoding utf-8
         puts $f {puts [list $argv0 $argv $tcl_interactive]}
